# django-reporters

./: .gitignore  AUTHORS.md  INSTALL.md  MANIFEST.in  NOTICE.md  README.md  pyproject.toml  setup.py
reporters/: conf.py  filters.py  handlers.py  signals.py  urls.py  utils.py  views.py
reporters/management/commands/: reporters.py
requirements/: pypi.txt
tests/: settings.py  tests.py
